--- a/kafka/config/server.properties
+++ b/kafka/config/server.properties
@@ -32,7 +32,7 @@ listeners=PLAINTEXT://:9092
 # Hostname the broker will advertise to producers and consumers. If not set, it uses the
 # value for "host.name" if configured.  Otherwise, it will use the value returned from
 # java.net.InetAddress.getCanonicalHostName().
-#advertised.host.name=<hostname routable by clients>
+advertised.host.name=localhost
 
 # The port to publish to ZooKeeper for clients to use. If this is not set,
 # it will publish the same port that the broker binds to.
@@ -117,3 +117,6 @@ zookeeper.connect=localhost:2181
 
 # Timeout in ms for connecting to zookeeper
 zookeeper.connection.timeout.ms=6000
+
+# Enable topic deletions
+delete.topic.enable = true
